<resources>
    <string name="app_name">BMICalculator</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="upgrade_to_premium">Upgrade to Premium</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="about_the_app">About The App</string>
    <string name="share_the_app">Share the App</string>
    <string name="rate_the_app">Rate The App</string>
    <string name="more_from_us">More From Us</string>
    <string name="more">More</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
</resources>
