<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home_menu"
            android:icon="@drawable/home_white"
            android:title="@string/home" />

        <item
            android:id="@+id/history_menu"
            android:icon="@drawable/history_white"
            android:title="@string/history"
            android:checkable="false"
            />

        <item
            android:id="@+id/upgrade_menu"
            android:icon="@drawable/crown"
            android:title="@string/upgrade_to_premium"
            android:checkable="false"
            />
    </group>

    <item android:title="@string/app_name">

        <menu>

                <item
                    android:id="@+id/nav_privacy_policy"
                    android:title="@string/privacy_policy"
                    android:icon="@drawable/info_white"/>

                <item
                    android:id="@+id/nav_privacy_settings"
                    android:title="@string/settings"
                    android:icon="@drawable/settings_white"/>


                <item
                    android:id="@+id/nav_about"
                    android:title="@string/about_the_app"
                    android:icon="@drawable/help_white"
                    />

                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share_the_app"
                    android:icon="@drawable/share_white"/>

                <item
                    android:id="@+id/nav_rate"
                    android:title="@string/rate_the_app"
                    android:icon="@drawable/rate_white" />

            <item
                    android:id="@+id/nav_more"
                    android:title="@string/more_from_us"
                    android:icon="@drawable/more_horizontal_white" />

        </menu>
    </item>

</menu>
